--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Avenir Next', sans-serif;
   font-size: 62.5%;
 }
 
